--- a/src/index.scss
+++ b/src/index.scss
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   //font-family: 'Open Sans Condensed', sans-serif;
-  font-family: 'Indie Flower', cursive;
+  font-family: $base-font;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #e3cdc1;
