--- a/src/components/GroceryItem/GroceryItem.scss
+++ b/src/components/GroceryItem/GroceryItem.scss
@@ -1,10 +1,10 @@
+@import '../../assets/css/variables.scss';
+
 .grocery-item {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	margin: 0 0 10px;
-
-
 }
 
 .grocery-item-total {
@@ -27,7 +27,7 @@
   padding: 0 15px;
   border: 1px solid #ccc;
   flex: 0 0 100px;
-  font-family: 'Indie Flower', cursive;
+  //font-family: $base-font;
 
   &.complete {
 		background-color: #ccc;
