--- a/src/components/GroceryItem/GroceryItem.scss
+++ b/src/components/GroceryItem/GroceryItem.scss
@@ -27,6 +27,9 @@
   padding: 0 15px;
   border: 1px solid #ccc;
   flex: 0 0 100px;
+  font-size: 16px;
+  box-sizing: border-box;
+  width: 177px;
   //font-family: $base-font;
 
   &.complete {
